troca para máquina de vendas.

--- a/html/www/ajuda.html
+++ b/html/www/ajuda.html
@@ -9,12 +9,12 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Maquina de Vendas USA</title>
+    <title>Máquina de Vendas USA</title>
     <meta property="og:image" content="../static/img/vendedorinternacional.jpg"/>
-    <meta name="description" content="Maquina de Vendas USA. Nossos serviços: Treinamento em vendas internacionais, Private label, serviço de redirecionamento, redirecionamento brasil"/>
-    <meta property="og:title" content="Maquina de Vendas USA"/>
-    <meta property="og:site_name" content="Maquina de Vendas USA"/>
-    <meta property="og:description" content="Maquina de Vendas USA. Nossos serviços: Treinamento em vendas internacionais, Private label, serviço de redirecionamento,  redirecionamento brasil"/>
+    <meta name="description" content="Máquina de Vendas USA. Nossos serviços: Treinamento em vendas internacionais, Private label, serviço de redirecionamento, redirecionamento brasil"/>
+    <meta property="og:title" content="Máquina de Vendas USA"/>
+    <meta property="og:site_name" content="Máquina de Vendas USA"/>
+    <meta property="og:description" content="Máquina de Vendas USA. Nossos serviços: Treinamento em vendas internacionais, Private label, serviço de redirecionamento,  redirecionamento brasil"/>
     <meta property="og:type" content="website"/>
 
     <!-- Bootstrap Core CSS -->
@@ -49,13 +49,6 @@
 
     </script>
 
-    <!-- begin olark code -->
-    <script type="text/javascript" async>
-        ;(function(o,l,a,r,k,y){if(o.olark)return; r="script";y=l.createElement(r);r=l.getElementsByTagName(r)[0]; 	y.async=1;y.src="//"+a;r.parentNode.insertBefore(y,r); y=o.olark=function(){k.s.push(arguments);k.t.push(+new 	Date)}; y.extend=function(i,j){y("extend",i,j)}; y.identify=function(i){y("identify",k.i=i)}; 	y.configure=function(i,j){y("configure",i,j);k.c[i]=j}; k=y._={s:[],t:[+new Date],c:{},l:a}; })	(window,document,"static.olark.com/jsclient/loader.js");
-        /* custom configuration goes here (www.olark.com/documentation) */
-        olark.identify('3914-306-10-7635');
-    </script>
-    <!-- end olark code -->
     <script src="../static/jsi18n/pt-br/djangojs.js"></script>
 </head>
 
@@ -76,10 +69,10 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="https://vendedorinternacional.net/#contact">Contato</a>
+                        <a class="page-scroll" href="/ajuda.html#contact">Contato</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="https://vendedorinternacional.net/ajuda.html">Tutorial</a>
+                        <a class="page-scroll" href="/ajuda.html">Tutorial</a>
                     </li>
                      <li>
                         <a href="/user/registration">Cadastre-se</a>
@@ -110,7 +103,7 @@
                 <p>Veja abaixo como enviar os seus produtos.</p>
                 <iframe src="https://www.youtube.com/embed/rluVgSS2hbI?autoplay=0&amp;rel=0&amp;modestbranding=1&amp;showinfo=0&amp;controls=1&amp;hd=1" frameborder="0" width="840px" height="475"></iframe>
                 <br><br><br><br>
-                <h3>Endereço Maquina de Vendas USA</h3>
+                <h3>Endereço Máquina de Vendas USA</h3>
                 <p>Veja abaixo o nosso endereço para o qual você deve enviar seus produtos antes que eles sejam enviados para Amazon/Ebay.</p>
 
                 <img src="../static/img/ajuda-endereco-1.png" width="100%" /><br><br>
@@ -175,9 +168,9 @@
                 <div class="col-md-3">
                     <ul class="list-inline social-buttons"><!--
                         <li><a href="#"><i class="fa fa-twitter"></i></a>
-                        </li>-->
+                        </li>
                         <li><a href="https://www.facebook.com/groups/vendedorinternacional/">Facebook</a>
-                        </li><!--
+                        </li>
                         <li><a href="#"><i class="fa fa-linkedin"></i></a>
                         </li>-->
                     </ul>
