--- a/html/www/index.html
+++ b/html/www/index.html
@@ -49,13 +49,6 @@
 
     </script>
 
-    <!-- begin olark code -->
-    <script type="text/javascript" async>
-        ;(function(o,l,a,r,k,y){if(o.olark)return; r="script";y=l.createElement(r);r=l.getElementsByTagName(r)[0]; 	y.async=1;y.src="//"+a;r.parentNode.insertBefore(y,r); y=o.olark=function(){k.s.push(arguments);k.t.push(+new 	Date)}; y.extend=function(i,j){y("extend",i,j)}; y.identify=function(i){y("identify",k.i=i)}; 	y.configure=function(i,j){y("configure",i,j);k.c[i]=j}; k=y._={s:[],t:[+new Date],c:{},l:a}; })	(window,document,"static.olark.com/jsclient/loader.js");
-        /* custom configuration goes here (www.olark.com/documentation) */
-        olark.identify('3914-306-10-7635');
-    </script>
-    <!-- end olark code -->
     <script src="../static/jsi18n/pt-br/djangojs.js"></script>
 </head>
 
@@ -69,7 +62,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top"><img src="../static/img/logo_sup.png" /><img src="../static/img/logo_bottom.png" width="175" /></a>
+                <a class="navbar-brand page-scroll" href="#page-top"><img src="../static/img/logo-maquina-vendas.png" /></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -496,9 +489,9 @@
                 <div class="col-md-3">
                     <ul class="list-inline social-buttons"><!--
                         <li><a href="#"><i class="fa fa-twitter"></i></a>
-                        </li>-->
+                        </li>
                         <li><a href="https://www.facebook.com/groups/vendedorinternacional/">Facebook</a>
-                        </li><!--
+                        </li>
                         <li><a href="#"><i class="fa fa-linkedin"></i></a>
                         </li>-->
                     </ul>
