--- a/html/www/maintenance.html
+++ b/html/www/maintenance.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Maquina de Vendas USA- Site em manutenção</title>
+    <title>Máquina de Vendas USA - Site em manutenção</title>
 
     <!-- Custom fontes -->
     <link href="/static/externo/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -20,14 +20,6 @@
 
     <!-- Estilo -->
     <link href="/static/css/style.css" rel="stylesheet">
-
-    <!-- begin olark code -->
-    <script type="text/javascript" async>
-        ;(function(o,l,a,r,k,y){if(o.olark)return; r="script";y=l.createElement(r);r=l.getElementsByTagName(r)[0]; 	y.async=1;y.src="//"+a;r.parentNode.insertBefore(y,r); y=o.olark=function(){k.s.push(arguments);k.t.push(+new 	Date)}; y.extend=function(i,j){y("extend",i,j)}; y.identify=function(i){y("identify",k.i=i)}; 	y.configure=function(i,j){y("configure",i,j);k.c[i]=j}; k=y._={s:[],t:[+new Date],c:{},l:a}; })	(window,document,"static.olark.com/jsclient/loader.js");
-        /* custom configuration goes here (www.olark.com/documentation) */
-        olark.identify('3914-306-10-7635');
-    </script>
-    <!-- end olark code -->
 
 </head>
 
