--- a/html/www/redidecionamento-brasil/index.html
+++ b/html/www/redidecionamento-brasil/index.html
@@ -62,7 +62,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top"><img src="../../static/img/logo_sup.png" /><img src="../../static/img/logo_bottom.png" width="175" /></a>
+                <a class="navbar-brand page-scroll" href="#page-top"><img src="../../static/img/logo-maquina-vendas.png" /></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -311,9 +311,9 @@
                 <div class="col-md-3">
                     <ul class="list-inline social-buttons"><!--
                         <li><a href="#"><i class="fa fa-twitter"></i></a>
-                        </li>-->
+                        </li>
                         <li><a href="https://www.facebook.com/groups/vendedorinternacional/">Facebook</a>
-                        </li><!--
+                        </li>
                         <li><a href="#"><i class="fa fa-linkedin"></i></a>
                         </li>-->
                     </ul>
