--- a/html/www/maintenance.html
+++ b/html/www/maintenance.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Máquina de Vendas USA - Site em manutenção</title>
+    <title>Redirecionamento - Máquina de Vendas USA - Site em manutenção</title>
 
     <!-- Custom fontes -->
     <link href="/static/externo/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
