--- a/html/www/termos-e-condicoes-de-uso.html
+++ b/html/www/termos-e-condicoes-de-uso.html
@@ -9,13 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Máquina de Vendas USA</title>
-    <meta property="og:image" content="../static/img/vendedorinternacional.jpg"/>
-    <meta name="description" content="Máquina de Vendas USA. Nossos serviços: Treinamento em vendas internacionais, Private label, serviço de redirecionamento, redirecionamento brasil"/>
-    <meta property="og:title" content="Máquina de Vendas USA"/>
-    <meta property="og:site_name" content="Máquina de Vendas USA"/>
-    <meta property="og:description" content="Máquina de Vendas USA. Nossos serviços: Treinamento em vendas internacionais, Private label, serviço de redirecionamento,  redirecionamento brasil"/>
-    <meta property="og:type" content="website"/>
+    <title>Redirecionamento - Máquina de Vendas USA</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../static/externo/bootstrap/css/bootstrap.min.css" rel="stylesheet">
