--- a/html/www/ajuda.html
+++ b/html/www/ajuda.html
@@ -157,7 +157,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; Maquina de Vendas USA 2017</span>
+                    <span class="copyright">Copyright &copy; Máquina de Vendas USA 2017</span>
                 </div>
                 <div class="col-md-3">
                     <ul class="list-inline social-buttons"><!--
