--- a/html/www-en/index.html
+++ b/html/www-en/index.html
@@ -9,12 +9,12 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>FBAPrepMaster - Shipment Amazon</title>
-    <meta property="og:image" content="../static/img/vendedorinternacional.jpg"/>
-    <meta name="description" content="Vendedor online internacional. Nossos serviços: Treinamento em vendas internacionais, Private label, serviço de redirecionamento, redirecionamento brasil"/>
-    <meta property="og:title" content="Vendedor internacional"/>
-    <meta property="og:site_name" content="Vendedor internacional"/>
-    <meta property="og:description" content="Vendedor online internacional. Nossos serviços: Treinamento em vendas internacionais, Private label, serviço de redirecionamento, redirecionamento brasil"/>
+    <title>Prepship Tool</title>
+    <meta property="og:image" content="../static/img/"/>
+    <meta name="description" content="Prepship Tool. We are the only fully automated prep & ship platform. No more sending emails back and forth. No more wait. Our system will notify you all the steps of the shipment creation."/>
+    <meta property="og:title" content="Prepship Tool"/>
+    <meta property="og:site_name" content="Prepship Tool"/>
+    <meta property="og:description" content="Prepship Tool. We are the only fully automated prep & ship platform. No more sending emails back and forth. No more wait. Our system will notify you all the steps of the shipment creation."/>
     <meta property="og:type" content="website"/>
 
     <!-- Bootstrap Core CSS -->
@@ -142,7 +142,7 @@
                     </ul>
                 </div>
                 <div class="col-md-5">
-                    <img src="../static/img/img-fbaprepmaster.png" width="100%" />
+                    <img src="../static/img/box-img.png" width="100%" />
                 </div>
             </div>
         </div>
@@ -223,7 +223,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; All Rights Reserved - fbapremaster 2017</span>
+                    <span class="copyright">Copyright &copy; All Rights Reserved - Prepship Tool 2017</span>
                 </div>
                 <div class="col-md-3">
 
