envio merchant e data de previsão.

--- a/html/www-en/index.html
+++ b/html/www-en/index.html
@@ -9,13 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>FBAPrepMaster - Shipment Amazon</title>
-    <meta property="og:image" content="../static/img/vendedorinternacional.jpg"/>
-    <meta name="description" content="Vendedor online internacional. Nossos serviços: Treinamento em vendas internacionais, Private label, serviço de redirecionamento, redirecionamento brasil"/>
-    <meta property="og:title" content="Vendedor internacional"/>
-    <meta property="og:site_name" content="Vendedor internacional"/>
-    <meta property="og:description" content="Vendedor online internacional. Nossos serviços: Treinamento em vendas internacionais, Private label, serviço de redirecionamento, redirecionamento brasil"/>
-    <meta property="og:type" content="website"/>
+    <title>PrepShip Tool</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../static/externo/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -97,7 +91,7 @@
                 <div class="intro-text">
                     <div class="intro-heading">FBA Prep made easy </div>
                     <div class="intro-lead-in">Eliminate the hassle of handling inventory and focus on growing your business</div>
-                    <a href="#services" title="Saiba mais sobre vendedor internacional" class="page-scroll btn btn-xl">More information</a>
+                    <a href="#services" title="more information" class="page-scroll btn btn-xl">More information</a>
                 </div>
             </div>
             <div class="col-md-1"></div>
