Mudanca de logo

--- a/html/www-en/terms-and-conditions.html
+++ b/html/www-en/terms-and-conditions.html
@@ -51,7 +51,7 @@
 
 </head>
 
-<body id="page-top" class="index red-br termos">
+<body id="page-top" class="index red-br termos en">
 
     <!-- Navigation -->
     <nav id="mainNav" class="navbar navbar-default navbar-custom navbar-fixed-top affix">
@@ -61,7 +61,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top"><img src="../static/img/logo-maquina-vendas.png" /></a>
+                <a class="navbar-brand page-scroll" href="/"><img src="../static/img/logo-en.png" /></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
