Site institucional bilingue

--- a/html/www/pt-br/termos-e-condicoes-de-uso/index.html
+++ b/html/www/pt-br/termos-e-condicoes-de-uso/index.html
@@ -9,20 +9,26 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Redirecionamento - Máquina de Vendas USA</title>
+    <title>Prepship Tool - Termos e condicoes</title>
+    <meta property="og:image" content="../../static/img/logo-en-maior.png"/>
+    <meta name="description" content="Prepship Tool. Somos a única plataforma totalmente automatizada de preparação e envio para Amazon. Você não precisa mais controlar seus envios e invetario em planilhas e email. Nosso sistema irá notificá-lo todas as etapas desde o recebimento do seu produto, a preparação e o envio para Amazon. Além disso, você pode acessar a nossa plataforma a hora que quiser para verificar a situação do seu estoque e seus produtos."/>
+    <meta property="og:title" content="Prepship Tool"/>
+    <meta property="og:site_name" content="Prepship Tool"/>
+    <meta property="og:description" content="Prepship Tool. Somos a única plataforma totalmente automatizada de preparação e envio para Amazon. Você não precisa mais controlar seus envios e invetario em planilhas e email. Nosso sistema irá notificá-lo todas as etapas desde o recebimento do seu produto, a preparação e o envio para Amazon. Além disso, você pode acessar a nossa plataforma a hora que quiser para verificar a situação do seu estoque e seus produtos."/>
+    <meta property="og:type" content="website"/>
 
     <!-- Bootstrap Core CSS -->
-    <link href="../static/externo/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../../static/externo/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="../static/externo/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="../../../static/externo/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
     <!-- Theme CSS -->
-    <link href="../static/css/style.css" rel="stylesheet">
+    <link href="../../../static/css/style.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -45,7 +51,7 @@
 
 </head>
 
-<body id="page-top" class="index red-br termos">
+<body id="page-top" class="index red-br termos en">
 
     <!-- Navigation -->
     <nav id="mainNav" class="navbar navbar-default navbar-custom navbar-fixed-top affix">
@@ -55,26 +61,29 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top"><img src="../static/img/logo-maquina-vendas.png" /></a>
+                <a class="navbar-brand page-scroll" href="/pt/"><img src="../../../static/img/logo-en.png" /></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a class="page-scroll" href="/ajuda.html#contact">Contato</a>
+                    <li class="page-scroll">
+                        <a title="Home" href="/pt/">Home</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="/ajuda.html">Tutorial</a>
+                        <a class="page-scroll" href="/pt/ajuda">Tutorial</a>
                     </li>
                      <li>
-                        <a href="/user/registration">Cadastre-se</a>
+                        <a title="Cadastre-se" href="/pt/user/registration">Cadastre-se</a>
                     </li>
                     <li>
-                        <a href="/login"><strong><i class="fa fa-sign-in"></i></strong> Login</a>
+                        <a title="Login" href="/pt/login"><strong><i class="fa fa-sign-in"></i></strong> Log in</a>
                     </li>
 
                 </ul>
+
+                <a title="Translate to english" class="bandeira bandeira-en" href="/en/terms-and-conditions">Translate to english</a>
+
             </div>
             <!-- /.navbar-collapse -->
         </div>
@@ -216,7 +225,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; Máquina de Vendas USA 2017</span>
+                    <span class="copyright">Copyright &copy; Prepship Tool 2017</span>
                 </div>
                 <div class="col-md-3">
                     <ul class="list-inline social-buttons"><!--
@@ -231,28 +240,13 @@
                 <div class="col-md-5">
                     <ul class="list-inline quicklinks">
                         <li>
-                            <a href="/termos-e-condicoes-de-uso.html">Termos e Condições de Uso</a>
+                            <a href="/pt/termos-e-condicoes-de-uso">Termos e Condições de Uso</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </div>
     </footer>
-
-    <!-- jQuery -->
-    <script src="../static/externo/jquery/jquery.min.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="../static/externo/bootstrap/js/bootstrap.min.js"></script>
-
-    <!-- Plugin JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js" integrity="sha384-mE6eXfrb8jxl0rzJDBRanYqgBxtJ6Unn4/1F7q4xRRyIw7Vdg9jP4ycT7x1iVsgb" crossorigin="anonymous"></script>
-
-    <!-- Contact Form JavaScript -->
-    <script src="../static/js/jqBootstrapValidation.js"></script>
-
-    <!-- Theme JavaScript -->
-    <script src="../static/js/applications.js"></script>
 
 </body>
 
