--- a/html/www/en/terms-and-conditions/index.html
+++ b/html/www/en/terms-and-conditions/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
     <title>Prepship Tool - Terms and conditions</title>
-    <meta property="og:image" content="../static/img/"/>
+    <meta property="og:image" content="../../../static/img/logo-en-maior.png"/>
     <meta name="description" content="Prepship Tool. We are the only fully automated prep & ship platform. No more sending emails back and forth. No more wait. Our system will notify you all the steps of the shipment creation."/>
     <meta property="og:title" content="Prepship Tool"/>
     <meta property="og:site_name" content="Prepship Tool"/>
@@ -18,17 +18,17 @@
     <meta property="og:type" content="website"/>
 
     <!-- Bootstrap Core CSS -->
-    <link href="../static/externo/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../../static/externo/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="../static/externo/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="../../../static/externo/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
     <!-- Theme CSS -->
-    <link href="../static/css/style.css" rel="stylesheet">
+    <link href="../../../static/css/style.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -61,26 +61,29 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="/"><img src="../static/img/logo-en.png" /></a>
+                <a class="navbar-brand page-scroll" href="/en-us/"><img src="../../../static/img/logo-en.png" /></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="page-scroll">
-                        <a title="Home" href="/">Home</a>
+                        <a title="Home" href="/en-us/">Home</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="/help.html">Tutorial</a>
+                        <a class="page-scroll" href="/en-us/help">Tutorial</a>
                     </li>
                      <li>
-                        <a title="Cadastre-se" href="/user/registration">Sign up free</a>
+                        <a title="Cadastre-se" href="/en-us/user/registration">Sign up free</a>
                     </li>
                     <li>
-                        <a title="Login" href="/login"><strong><i class="fa fa-sign-in"></i></strong> Log in</a>
+                        <a title="Login" href="/en-us/login"><strong><i class="fa fa-sign-in"></i></strong> Log in</a>
                     </li>
 
                 </ul>
+
+                <a title="traduzir para português" class="bandeira" href="/pt-br/termos-e-condicoes-de-uso">Traduzir para portugues brasil</a>
+
             </div>
             <!-- /.navbar-collapse -->
         </div>
@@ -232,16 +235,16 @@
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-5">
                     <span class="copyright">Copyright &copy; All Rights Reserved - Prepship Tool 2017</span>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-2">
 
                 </div>
                 <div class="col-md-5">
                     <ul class="list-inline quicklinks">
                         <li>
-                            <a href="/terms-and-conditions.html">Terms & Conditions</a>
+                            <a href="/en/terms-and-conditions">Terms & Conditions</a>
                         </li>
                     </ul>
                 </div>
@@ -250,19 +253,19 @@
     </footer>
 
     <!-- jQuery -->
-    <script src="../static/externo/jquery/jquery.min.js"></script>
+    <script src="../../static/externo/jquery/jquery.min.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="../static/externo/bootstrap/js/bootstrap.min.js"></script>
+    <script src="../../static/externo/bootstrap/js/bootstrap.min.js"></script>
 
     <!-- Plugin JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js" integrity="sha384-mE6eXfrb8jxl0rzJDBRanYqgBxtJ6Unn4/1F7q4xRRyIw7Vdg9jP4ycT7x1iVsgb" crossorigin="anonymous"></script>
 
     <!-- Contact Form JavaScript -->
-    <script src="../static/js/jqBootstrapValidation.js"></script>
+    <script src="../../static/js/jqBootstrapValidation.js"></script>
 
     <!-- Theme JavaScript -->
-    <script src="../static/js/applications.js"></script>
+    <script src="../../static/js/applications.js"></script>
 
 </body>
 
