--- a/html/www/pt-br/index.html
+++ b/html/www/pt-br/index.html
@@ -10,25 +10,25 @@
     <meta name="author" content="">
 
     <title>PrepShip Tool</title>
-    <meta property="og:image" content="../static/img/"/>
-    <meta name="description" content="Prepship Tool. We are the only fully automated prep & ship platform. No more sending emails back and forth. No more wait. Our system will notify you all the steps of the shipment creation."/>
+    <meta property="og:image" content="../../static/img/logo-en-maior.png"/>
+    <meta name="description" content="Prepship Tool. Somos a única plataforma totalmente automatizada de preparação e envio para Amazon. Você não precisa mais controlar seus envios e invetario em planilhas e email. Nosso sistema irá notificá-lo todas as etapas desde o recebimento do seu produto, a preparação e o envio para Amazon. Além disso, você pode acessar a nossa plataforma a hora que quiser para verificar a situação do seu estoque e seus produtos."/>
     <meta property="og:title" content="Prepship Tool"/>
     <meta property="og:site_name" content="Prepship Tool"/>
-    <meta property="og:description" content="Prepship Tool. We are the only fully automated prep & ship platform. No more sending emails back and forth. No more wait. Our system will notify you all the steps of the shipment creation."/>
+    <meta property="og:description" content="Prepship Tool. Somos a única plataforma totalmente automatizada de preparação e envio para Amazon. Você não precisa mais controlar seus envios e invetario em planilhas e email. Nosso sistema irá notificá-lo todas as etapas desde o recebimento do seu produto, a preparação e o envio para Amazon. Além disso, você pode acessar a nossa plataforma a hora que quiser para verificar a situação do seu estoque e seus produtos."/>
     <meta property="og:type" content="website"/>
 
     <!-- Bootstrap Core CSS -->
-    <link href="../static/externo/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../static/externo/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="../static/externo/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="../../static/externo/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
     <!-- Theme CSS -->
-    <link href="../static/css/style.css" rel="stylesheet">
+    <link href="../../static/css/style.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -71,19 +71,22 @@
                         <a title="Home" href="#page-top">Home</a>
                     </li>
                     <li>
-                        <a title="Nossos Serviços" class="page-scroll" href="#services">Services</a>
+                        <a title="Nossos Serviços" class="page-scroll" href="#services">Serviços</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="/help.html">Tutorial</a>
+                        <a class="page-scroll" href="/pt/ajuda">Tutorial</a>
                     </li>
                      <li>
-                        <a title="Cadastre-se" href="/user/registration">Sign up free</a>
+                        <a title="Cadastre-se" href="/pt/user/registration">Cadastre-se</a>
                     </li>
                     <li>
-                        <a title="Login" href="/login"><strong><i class="fa fa-sign-in"></i></strong> Log in</a>
+                        <a title="Login" href="/pt/login"><strong><i class="fa fa-sign-in"></i></strong> Log in</a>
                     </li>
 
                 </ul>
+
+                <a title="Translate to English" class="bandeira bandeira-en" href="/en/">Translate to English</a>
+
             </div>
             <!-- /.navbar-collapse -->
         </div>
@@ -95,22 +98,22 @@
         <div class="container">
             <div class="col-md-7">
                 <div class="intro-text">
-                    <div class="intro-heading">FBA Prep made easy </div>
-                    <div class="intro-lead-in">Eliminate the hassle of handling inventory and focus on growing your business</div>
-                    <a href="#services" title="more information" class="page-scroll btn btn-xl">More information</a>
+                    <div class="intro-heading">Vendedor Amazon</div>
+                    <div class="intro-lead-in">Não se preocupe mais em como enviar seus produtos para amazon. Apenas concentre-se no crescimento do seu negócio</div>
+                    <a href="#services" title="more information" class="page-scroll btn btn-xl">Mais Informações</a>
                 </div>
             </div>
             <div class="col-md-1"></div>
             <div class="col-md-4 box-topo">
                 <ul>
-                    <li><i class="fa fa-2x fa-credit-card"></i> $1.49 FLAT RATE</li>
-                    <li><i class="fa fa-2x  fa-barcode"></i> Professional & Efficient FBA prep service at a simple flat rate.</li>
-                    <li><i class="fa fa-2x  fa-ticket"></i> No charges for removing price stickers</li>
-                    <li><i class="fa fa-2x  fa-cloud"></i> No charges for bubble wrap</li>
-                    <li><i class="fa fa-2x  fa-shopping-bag"></i> No charges for poly bags</li>
-                    <li><i class="fa fa-2x  fa-archive"></i> No charges for boxes</li>
+                    <li><i class="fa fa-2x fa-credit-card"></i> Valor fixo de $1.29 por produto</li>
+                    <li><i class="fa fa-2x  fa-barcode"></i> Preparado por vendedores Amazon experientes</li>
+                    <li><i class="fa fa-2x  fa-ticket"></i> Sem cobrança por remoção de adesivos de preço</li>
+                    <li><i class="fa fa-2x  fa-cloud"></i> Sem cobrança de papel bolha</li>
+                    <li><i class="fa fa-2x  fa-shopping-bag"></i> Sem encargos extras para poly bags</li>
+                    <li><i class="fa fa-2x  fa-archive"></i> Sem encargos extras por caixas</li>
                 </ul><br>
-                 <a href="/user/registration" title="Sign up now" class="btn btn-xl signup">Sign up free</a>
+                 <a href="/pt/user/registration" title="Sign up now" class="btn btn-xl signup">Cadastre-se</a>
 
             </div>
         </div>
@@ -121,28 +124,32 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">FBA Prep Services</h2>
+                    <h2 class="section-heading">Serviço de envio para Amazon</h2>
                 </div>
             </div><br><br>
             <div class="row">
                 <div class="col-md-7">
-                    <p class="text-muted">We are the only fully automated prep & ship platform. No more sending emails back and forth. No more wait. Our system will notify you all the steps of the shipment creation.</p>
-                    <ul class="list-qua col-md-5">
-                        <li><i class="fa fa-check-square-o"></i> Quality control</li>
-                        <li><i class="fa fa-check-square-o"></i> Repackaging</li>
-                        <li><i class="fa fa-check-square-o"></i> Labeling</li>
-                        <li><i class="fa fa-check-square-o"></i> Fragile item preparation</li>
-                        <li><i class="fa fa-check-square-o"></i> Loose products</li>
-                        <li><i class="fa fa-check-square-o"></i> Sold as a set</li>
-                        <li><i class="fa fa-check-square-o"></i> Boxed units</li>
-                        <li><i class="fa fa-check-square-o"></i> Poly bagged units</li>
-                        <li><i class="fa fa-check-square-o"></i> Case-packed products</li>
-                        <li><i class="fa fa-check-square-o"></i> Expiration dates</li>
-                        <li><i class="fa fa-check-square-o"></i> Adult products preparations</li>
+                    <p class="text-muted">Somos a única plataforma totalmente automatizada de preparação e envio para Amazon. Você não precisa
+                        mais controlar seus envios e invetario em planilhas e email. Nosso sistema irá notificá-lo todas as etapas desde o
+                        recebimento do seu produto, a preparação e o envio para Amazon. Além disso, você pode acessar a nossa plataforma a
+                        hora que quiser para verificar a situação do seu estoque e seus produtos. <a href="/pt/ajuda" class="download">Veja como funciona.</a> </p>
+                    <p><strong>Veja alguns dos nossos diferenciais:</strong></p>
+                    <ul class="list-qua col-md-6">
+                        <li><i class="fa fa-check-square-o"></i> Controle de qualidade </li>
+                        <li><i class="fa fa-check-square-o"></i> Reencaminhamento </li>
+                        <li><i class="fa fa-check-square-o"></i> Rotulagem </li>
+                        <li><i class="fa fa-check-square-o"></i> Preparação de item frágil</li>
+                        <li><i class="fa fa-check-square-o"></i> Produtos soltos</li>
+                        <li><i class="fa fa-check-square-o"></i> Produtos vendidos em conjunto</li>
+                        <li><i class="fa fa-check-square-o"></i> Unidades em caixa</li>
+                        <li><i class="fa fa-check-square-o"></i> Unidades em polipropileno </li>
+                        <li><i class="fa fa-check-square-o"></i> Produtos embalados por embalagem</li>
+                        <li><i class="fa fa-check-square-o"></i> Data de validade</li>
+                        <li><i class="fa fa-check-square-o"></i> Preparação de produtos para adultos </li>
                     </ul>
                 </div>
                 <div class="col-md-5">
-                    <img src="../static/img/box-img.png" width="100%" />
+                    <img src="../../static/img/box-img.png" width="100%" />
                 </div>
             </div>
         </div>
@@ -152,8 +159,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">FBA Prep Services</h2>
-                    <h3 class="section-subheading text-muted">Simply send your products to us and we label, prep and package them up to ship to Amazon. Anything from small arbitrage items to large pallet shipments.</h3>
+                    <h2 class="section-heading">Preparação e Envio para Amazon</h2>
+                    <h3 class="section-subheading text-muted">Basta enviar seus produtos para nós e rotulamos, preparamos e enviamos para a Amazon. Qualquer coisa, desde pequenos itens de arbitragem até grandes embarques de paletes.</h3>
                 </div>
             </div>
             <div class="row">
@@ -161,54 +168,55 @@
                     <ul class="timeline">
                         <li>
                             <div class="timeline-image">
-                                <img alt="Cadsatre-se" class="img-circle img-responsive" src="../static/img/about/1.jpeg" alt="">
+                                <img alt="Cadsatre-se" class="img-circle img-responsive" src="../../static/img/about/1.jpeg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <br><br>
-                                    <h4 class="subheading">Sign up</h4>
+                                    <h4 class="subheading">Primeiro, cadastre-se.</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted"><a href="/user/registration" class="download">Click here</a> and sign up. It’s quick and simple.</p>
+                                    <p class="text-muted"><a href="/pt/user/registration" class="download">Clique aqui</a> e cadastre-se. Simples e muito rápido.</p>
                                 </div>
                             </div>
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img alt="Insira seus produtos" class="img-circle img-responsive" src="../static/img/about/2.jpeg" alt="">
+                                <img alt="Insira seus produtos" class="img-circle img-responsive" src="../../static/img/about/2.jpeg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4 class="subheading">Add to your inventory</h4>
+                                    <h4 class="subheading">Envie seus produtos para nós</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Add to your inventory all the products you have shipped to our facility.</p>
+                                    <p class="text-muted">Adicione ao seu inventário todos os produtos que você enviou para nossas instalações.</p>
                                 </div>
                             </div>
                         </li>
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="../static/img/about/4.jpeg" alt="Produto vendido">
+                                <img class="img-circle img-responsive" src="../../static/img/about/4.jpeg" alt="Produto vendido">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading"><br><br>
-                                    <h4 class="subheading">Ship to Amazon</h4>
+                                    <h4 class="subheading">Envio par Amazon</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">After you receive the notification that your items has arrived, just create your Amazon shipment following <a href="/help.html" class="download">our tutorials.</a></p>
+                                    <p class="text-muted">
+Depois de receber a notificação de que seus itens chegaram, basta criar seu envio para a Amazon. <a href="/pt/ajuda" class="download">Veja como.</a></p>
                                 </div>
                             </div>
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <h4><br>Shipment<br> Concluded</h4>
+                                <h4><br>Envio<br> Concluido</h4>
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading"><br><br>
-                                    <h4 class="subheading">Shipment concluded</h4>
+                                    <h4 class="subheading">Envio Concluido</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">You can manage all the process in our system. It is quick, easy and extremely safe.</p>
+                                    <p class="text-muted">Você pode gerenciar todo o processo em nosso sistema. É rápido, fácil e extremamente seguro.</p>
                                 </div>
                             </div>
                         </li>
@@ -222,16 +230,16 @@
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; All Rights Reserved - PrepShip Tool 2017</span>
+                <div class="col-md-5">
+                    <span class="copyright">Copyright &copy; Todos os direitos reservados - PrepShip Tool 2017</span>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-2">
 
                 </div>
                 <div class="col-md-5">
                     <ul class="list-inline quicklinks">
                         <li>
-                            <a href="/terms-and-conditions.html">Terms & Conditions</a>
+                            <a href="/pt/termos-e-condicoes-de-uso">Termos e Condições de uso da plataforma</a>
                         </li>
                     </ul>
                 </div>
@@ -286,19 +294,19 @@
         </div>
     </div>-->
     <!-- jQuery -->
-    <script src="../static/externo/jquery/jquery.min.js"></script>
+    <script src="../../static/externo/jquery/jquery.min.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="../static/externo/bootstrap/js/bootstrap.min.js"></script>
+    <script src="../../static/externo/bootstrap/js/bootstrap.min.js"></script>
 
     <!-- Plugin JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js" integrity="sha384-mE6eXfrb8jxl0rzJDBRanYqgBxtJ6Unn4/1F7q4xRRyIw7Vdg9jP4ycT7x1iVsgb" crossorigin="anonymous"></script>
 
     <!-- Contact Form JavaScript -->
-    <script src="../static/js/jqBootstrapValidation.js"></script>
+    <script src="../../static/js/jqBootstrapValidation.js"></script>
 
     <!-- Theme JavaScript -->
-    <script src="../static/js/applications.js"></script>
+    <script src="../../static/js/applications.js"></script>
 
 </body>
 
