deixar a plataforma única, só que multilíngua.

--- a/html/www/en/index.html
+++ b/html/www/en/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en-US">
 
 <head>
 
@@ -85,7 +85,7 @@
 
                 </ul>
 
-                <a title="traduzir para português" class="bandeira" href="/pt/">Traduzir para portugues brasil</a>
+                <a title="Traduzir para português do Brasil" class="bandeira" href="/pt/">Traduzir para português do Brasil</a>
 
             </div>
             <!-- /.navbar-collapse -->
