--- a/html/www/pt/index.html
+++ b/html/www/pt/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
     <title>PrepShip Tool</title>
-    <meta property="og:image" content="../../static/img/logo-en-maior.png"/>
+    <meta property="og:image" content="/static/img/logo-en-maior.png"/>
     <meta name="description" content="Prepship Tool. Somos a única plataforma totalmente automatizada de preparação e envio para Amazon. Você não precisa mais controlar seus envios e invetario em planilhas e email. Nosso sistema irá notificá-lo todas as etapas desde o recebimento do seu produto, a preparação e o envio para Amazon. Além disso, você pode acessar a nossa plataforma a hora que quiser para verificar a situação do seu estoque e seus produtos."/>
     <meta property="og:title" content="Prepship Tool"/>
     <meta property="og:site_name" content="Prepship Tool"/>
@@ -77,10 +77,10 @@
                         <a class="page-scroll" href="/pt/ajuda">Tutorial</a>
                     </li>
                      <li>
-                        <a title="Cadastre-se" href="/pt/user/registration">Cadastre-se</a>
+                        <a title="Cadastre-se" href="/pt/usuario/cadastro">Cadastre-se</a>
                     </li>
                     <li>
-                        <a title="Login" href="/pt/login"><strong><i class="fa fa-sign-in"></i></strong> Log in</a>
+                        <a title="Login" href="/pt/entrar"><strong><i class="fa fa-sign-in"></i></strong> Log in</a>
                     </li>
 
                 </ul>
