--- a/html/www/maintenance/index-off.html
+++ b/html/www/maintenance/index-off.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="en-US">
 
 <head>
 
@@ -26,8 +26,20 @@
 <body class="manutencao-page">
     <div class="content">
 
-        <h1 class="texto"><img src="../static/img/logo-en-maior.png" width="200px"/><br><span>SITE UNDER</span> MAINTENANCE</h1>
-        <div class="centro"><p><img src="../static/img/mnt.jpg" height="200px"/> <br /><i class="fa fa-gears"></i> Be right back!</p></div>
+        <h1 class="texto">
+            <img src="/static/img/logo-en-maior.png" width="200px"/>
+            <br>
+            <span>SITE UNDER</span> MAINTENANCE
+            <br>
+            <span>SITE EM</span> MANUTENÇÃO
+        </h1>
+        <div class="centro">
+            <p>
+                <img src="/static/img/mnt.jpg" height="200px"/>
+                <br /><i class="fa fa-gears"></i> Be right back!
+                <br /><i class="fa fa-gears"></i> Logo logo voltamos!
+            </p>
+        </div>
     </div>
 </body>
 
