deixar a plataforma única, só que multilíngua.

--- a/html/www/en/index.html
+++ b/html/www/en/index.html
@@ -71,16 +71,16 @@
                         <a title="Home" href="#page-top">Home</a>
                     </li>
                     <li>
-                        <a title="Nossos Serviços" class="page-scroll" href="#services">Services</a>
+                        <a title="Services" class="page-scroll" href="#services">Services</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="/en/help">Tutorial</a>
                     </li>
                      <li>
-                        <a title="Cadastre-se" href="/en/user/registration">Sign up free</a>
+                        <a title="Sign up free" href="/en/user/registration">Sign up free</a>
                     </li>
                     <li>
-                        <a title="Login" href="/en/login"><strong><i class="fa fa-sign-in"></i></strong> Log in</a>
+                        <a title="Log in" href="/en/login"><strong><i class="fa fa-sign-in"></i></strong> Log in</a>
                     </li>
 
                 </ul>
