--- a/html/www/pt/index.html
+++ b/html/www/pt/index.html
@@ -113,7 +113,7 @@
                     <li><i class="fa fa-2x  fa-shopping-bag"></i> Sem encargos extras para poly bags</li>
                     <li><i class="fa fa-2x  fa-archive"></i> Sem encargos extras por caixas</li>
                 </ul><br>
-                 <a href="/pt/user/registration" title="Sign up now" class="btn btn-xl signup">Cadastre-se</a>
+                 <a href="/pt/usuario/cadastro/" title="Cadastre-se" class="btn btn-xl signup">Cadastre-se</a>
 
             </div>
         </div>
@@ -176,7 +176,7 @@
                                     <h4 class="subheading">Primeiro, cadastre-se.</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted"><a href="/pt/user/registration" class="download">Clique aqui</a> e cadastre-se. Simples e muito rápido.</p>
+                                    <p class="text-muted"><a href="/pt/usuario/cadastro/" class="download">Clique aqui</a> e cadastre-se. Simples e muito rápido.</p>
                                 </div>
                             </div>
                         </li>
