Novo site prepshiptool ajuste estrutura

--- a/html/www/index.html
+++ b/html/www/index.html
@@ -11,10 +11,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-        <!--        <link rel="stylesheet" href="css/bootstrap-theme.min.css">-->
+        <link rel="stylesheet" href="../static/externo/bootstrap/css/bootstrap.min.css">
+        <!--<link rel="stylesheet" href="css/bootstrap-theme.min.css">-->
 
-        <meta property="og:image" content="../../static/img/logo-en-maior.png"/>
+        <meta property="og:image" content="../static/img/logo-en-maior.png"/>
         <meta name="description" content="Somos uma Plataforma online que automatiza o processo de comunicação e pagamento entre empresas ou pessoas que realizam FBA e Merchant Prep & Ship e seus clientes.
 "/>
         <meta property="og:title" content="Prepship Tool"/>
@@ -24,22 +24,25 @@
         <meta property="og:type" content="website"/>
 
         <!--For Plugins external css-->
-        <link rel="stylesheet" href="css/plugins.css" />
+        <link rel="stylesheet" href="../static/css/site-prepshiptool/plugins.css" />
 
         <!--Theme custom css -->
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="../static/css/site-prepshiptool/style.css">
 
         <!--Theme Responsive css-->
-        <link rel="stylesheet" href="css/responsive.css" />
+        <link rel="stylesheet" href="../static/css/site-prepshiptool/responsive.css" />
 
-        <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+        <!-- Custom Fonts -->
+        <link href="../static/externo/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+        <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
+
+        <script src="../static/js/site-prepshiptool/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
     </head>
     <body data-spy="scroll" data-target="#main-navbar">
-        <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-		
-		<div class='preloader'><div class='loaded'>&nbsp;</div></div>
+		<!--<div class='preloader'><div class='loaded'>&nbsp;</div></div>-->
         <div id="menubar" class="main-menu">	
             <nav class="navbar navbar-default navbar-fixed-top">
                 <div class="container">
@@ -51,7 +54,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="index.html"><img width="288px" src="images/logo-en-white.png" alt="" /></a>
+                        <a class="navbar-brand" href="index.html"><img width="288px" src="../static/img/logo-en-white.png" alt="" /></a>
                     </div>
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -78,7 +81,7 @@
                 <div class="row">
                     <div class="homepage-style">
 
-                        <div class="top-arrow hidden-xs text-center"><img src="images/top-arrow.png" alt="" /></div>
+                        <div class="top-arrow hidden-xs text-center"><img src="../static/img/top-arrow.png" alt="" /></div>
 
                         <div class="col-md-6 col-sm-6 col-xs-12">
                             <div class="unique-apps">
@@ -111,15 +114,15 @@
                                     <div class="carousel-inner" role="listbox">
 
                                         <div class="item active">
-                                            <img width="520px" src="images/print-1-home.png" alt="" />
+                                            <img width="520px" src="../static/img/print-1-home.png" alt="" />
                                         </div>
 
                                         <div class="item">
-                                            <img width="520px" src="images/print-2-home.png" alt="" />
+                                            <img width="520px" src="../static/img/print-2-home.png" alt="" />
                                         </div>
 
                                         <div class="item">
-                                            <img width="520px" src="images/print-3-home.png" alt="" />
+                                            <img width="520px" src="../static/img/print-3-home.png" alt="" />
                                         </div>
 
                                     </div>
@@ -144,7 +147,7 @@
                     <div class="heading">
                         <div class="title text-center arrow-right">
                             <h4 class="">SOBRE O PREPSHIPTOOL</h4>
-                            <img class="hidden-xs" src="images/right-arrow.png" alt="" />
+                            <img class="hidden-xs" src="../static/img/right-arrow.png" alt="" />
 
                         </div>
                     </div>	
@@ -242,7 +245,7 @@
             <div class="container">
                 <div class="heading">
                     <div class="title text-center arrow-left">
-                        <img class="hidden-xs" src="images/left-arrow.png" alt="" />
+                        <img class="hidden-xs" src="../static/img/left-arrow.png" alt="" />
 
                         <h4 class="">VEJA ALGUNS DE NOSSOS DIFERENCIAIS</h4>
                     </div>
@@ -543,7 +546,7 @@
 
                 <div class="heading">
                     <div class="title text-center arrow-left">
-                        <img class="hidden-xs" src="images/left-arrow.png" alt="" />
+                        <img class="hidden-xs" src="../static/img/left-arrow.png" alt="" />
 
                         <h4 class="">O QUE NOSSOS CLIENTES ACHAM DA PLATAFORMA</h4>
                     </div>
@@ -558,7 +561,7 @@
                         <div class="col-md-6 col-sm-6 col-xs-12">
                             <div class="team-member">
 
-                                <img class="img-circle" src="images/team/1.png" alt="" />
+                                <img class="img-circle" src="../static/img/team/1.png" alt="" />
                                 <h5>Gustavo Martins - <a target="_blank" href="https://redirecionamento.maquinadevendasusa.com/login/">Maquina de vendas</a></h5>
                                 <p>"Não estava mais dando conta de tantos envios. Com a plataforma consegui atender mais clientes e automatizar todo o processo de preparação e envio."</p>
                             </div>
@@ -566,7 +569,7 @@
 
                         <div class="col-md-6 col-sm-6 col-xs-12">
                             <div class="team-member">
-                                <img class="img-circle" src="images/team/4.png" alt="" />
+                                <img class="img-circle" src="../static/img/team/4.png" alt="" />
                                 <h5>Carlos - <a target="_blank" href="http://bbox.prepshiptool.com">B Box</a></h5>
                                 <p>"Não posso enchergar meu negócio sem a plataforma. Com ela, consigo concentrar no crescimento do meu negócio."</p>
                             </div>
@@ -680,10 +683,10 @@
         </footer>
 
 
-        <script src="js/vendor/jquery-1.11.2.min.js"></script>
-        <script src="js/vendor/bootstrap.min.js"></script>
+        <script src="../static/js/site-prepshiptool/vendor/jquery-1.11.2.min.js"></script>
+        <script src="../static/js/site-prepshiptool/vendor/bootstrap.min.js"></script>
 
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
+        <script src="../static/js/site-prepshiptool/plugins.js"></script>
+        <script src="../static/js/site-prepshiptool/main.js"></script>
     </body>
 </html>
