Novo site prepshiptool

--- a/html/www-bbox/pt/ajuda/index.html
+++ b/html/www-bbox/pt/ajuda/index.html
@@ -82,7 +82,7 @@
 
                 </ul>
 
-                <a title="Translate to english" class="bandeira bandeira-en" href="/en/terms-and-conditions">Translate to English</a>
+                <a title="Translate to english" class="bandeira bandeira-en" href="/en/help">Translate to English</a>
 
             </div>
             <!-- /.navbar-collapse -->
@@ -216,6 +216,50 @@
                         </div>
                     </div>
                 </section>
+            </div>
+        </div>
+    </section>
+       <!-- Contact Section -->
+    <section id="contact">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Fale Conosco</h2>
+                    <h3 class="section-subheading text-muted">Caso precise de algum esclarecimento, teremos o maior prazer em atendê-lo. Preencha os campos abaixo e retornaremos o mais breve possível.</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <form name="sentMessage" id="contactForm" novalidate>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <input type="text" class="form-control" name="name" placeholder="Digite aqui seu nome *" id="name" required data-validation-required-message="Campo obrigatório">
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                                <div class="form-group">
+                                    <input type="email" class="form-control" name="email" placeholder="Digite aqui seu email *" id="email" required data-validation-required-message="Campo obrigatório">
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                                <div class="form-group">
+                                    <input type="tel" class="form-control" name="tel" placeholder="Digite aqui seu telefone de contato *" id="phone" required data-validation-required-message="Campo obrigatório">
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <textarea class="form-control" name="message" placeholder="Escreva sua mensagem *" id="message" required data-validation-required-message="Campo obrigatório"></textarea>
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                            </div>
+                            <div class="clearfix"></div>
+                            <div class="col-lg-12 text-center">
+                                <div id="contact-us-feedback"></div>
+                                <button type="button" class="btn btn-xl" id="contactus-form">Enviar</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </section>
