--- a/html/www/index.html
+++ b/html/www/index.html
@@ -41,7 +41,7 @@
 
         <script src="../static/js/site-prepshiptool/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
     </head>
-    <body data-spy="scroll" data-target="#main-navbar">
+    <body data-spy="scroll" data-target="#main-navbar" class="home">
 		<!--<div class='preloader'><div class='loaded'>&nbsp;</div></div>-->
         <div id="menubar" class="main-menu">	
             <nav class="navbar navbar-default navbar-fixed-top">
@@ -62,7 +62,8 @@
                         <ul class="nav navbar-nav navbar-right">
                             <li class="active"><a href="#home">Home<span class="sr-only">(current)</span></a></li>
                             <li><a href="#" onclick="document.getElementById('our-portfolio').scrollIntoView(true);return false;">Sobre</a></li>
-                            <li><a href="#" onclick="document.getElementById('footer').scrollIntoView(true);return false;">Fale Conosco</a></li>
+                            <li><a href="/fale-conosco">Fale Conosco</a></li>
+                            <li><a href="/ajuda">Ajuda</a></li>
                             <!--
                             <div class="contact-number text-right"> 
                                 <ul><li class="">Email: <a href="mailto:support@prepshiptool.freshdesk.com">support@prepshiptool.freshdesk.com
@@ -93,7 +94,7 @@
                                 <div class="home-btn"><!--
                                     <a href="#" class="btn btn-danger">Sou Redirecionador <span><i class="fa fa-paper-plane"></i></span></a>
                                     <a href="#" class="btn btn-danger">Procuro Redirecionador <span><i class="fa fa-paper-plane"></i></span></a>-->
-                                    <a href="mailto:support@prepshiptool.freshdesk.com" class="btn btn-danger">Assine Agora <span><i class="fa fa-paper-plane"></i></span></a>
+                                    <a href="/fale-conosco" class="btn btn-danger">Assine Agora <span><i class="fa fa-paper-plane"></i></span></a>
                                 </div>
                             </div>
                         </div>
@@ -211,7 +212,7 @@
 
                         <iframe width="100%" height="515" id="video-sobre" src="https://www.youtube.com/embed/LjqAB6fLnMA?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
                         <br><br>
-                        <h4 class="center">Assine agora. Mande um email para <a href="mailto:support@prepshiptool.freshdesk.com">support@prepshiptool.freshdesk.com</a></h4>
+                        <h4 class="center">Assine agora. Mande um email para <a href="mailto:support@prepshiptool.freshdesk.com">support@prepshiptool.freshdesk.com</a> ou mande uma mensagem no nosso formulario de contato. <a href="/fale-conosco">Clique Aqui</a></h4>
                     </div>
                 </div>
             </div>
