novos sites e possibilidade de reenvio dos pdfs

--- a/html/www-bbox/pt/ajuda/index.html
+++ b/html/www-bbox/pt/ajuda/index.html
@@ -82,7 +82,7 @@
 
                 </ul>
 
-                <a title="Translate to english" class="bandeira bandeira-en" href="/en/terms-and-conditions">Translate to English</a>
+                <a title="Translate to english" class="bandeira bandeira-en" href="/en/help/">Translate to English</a>
 
             </div>
             <!-- /.navbar-collapse -->
