--- a/html/www/fale-conosco/index.html
+++ b/html/www/fale-conosco/index.html
@@ -40,6 +40,7 @@
         <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
         <script src="../../static/js/site-prepshiptool/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+        <script src="../../static/jsi18n/pt/djangojs.js"></script>
     </head>
     <body data-spy="scroll" data-target="#main-navbar" class="ajuda">
 		<!--<div class='preloader'><div class='loaded'>&nbsp;</div></div>-->
@@ -161,5 +162,6 @@
 
         <script src="../../static/js/site-prepshiptool/plugins.js"></script>
         <script src="../../static/js/site-prepshiptool/main.js"></script>
+        <script src="../../static/js/applications.js"></script>
     </body>
 </html>
