--- a/html/www/fale-conosco/index.html
+++ b/html/www/fale-conosco/index.html
@@ -41,6 +41,16 @@
 
         <script src="../../static/js/site-prepshiptool/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
         <script src="../../static/jsi18n/pt/djangojs.js"></script>
+
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108398039-1"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-108398039-1');
+        </script>
     </head>
     <body data-spy="scroll" data-target="#main-navbar" class="ajuda">
 		<!--<div class='preloader'><div class='loaded'>&nbsp;</div></div>-->
