equalização master / wboss

--- a/html/www-bbox/en/terms-and-conditions/index.html
+++ b/html/www-bbox/en/terms-and-conditions/index.html
@@ -187,22 +187,18 @@
                             The following is the price list:</p>
 
                         <p>
-                            <i class="fa fa-check-square-o"></i> Product in stock on the SM USA up to 45 days: USD 1.49 per product</p>
+                            <i class="fa fa-check-square-o"></i> Product in stock on the PS Tool up to 45 days: USD 1.49 per product</p>
                         <p>
-                            <i class="fa fa-check-square-o"></i> Product in stock on the SM USA from 46 to 75 days: USD 1.79 per product</p>
+                            <i class="fa fa-check-square-o"></i> Product in stock on the PS Tool from 46 to 75 days: USD 1.79 per product</p>
                         <p>
-                            <i class="fa fa-check-square-o"></i> Product in stock on the SM USA from 76 to 90 days: USD 1.99 per product</p>
+                            <i class="fa fa-check-square-o"></i> Product in stock on the PS Tool from 76 to 90 days: USD 1.99 per product</p>
                         <p>&nbsp;</p>
                         <p>
-                            From day 91, the product will be considered abandoned, removed from the user list and the</p>
-                        <p>
-                            PrepShip Tool will place the product available for sale in order to reimburse the period of storage used.</p>
+                            From day 91, it will be added USD 0.25 per month per item stored.</p>
 
                         <p>
-                            Continuous products for a particular shipment must have their status as &quot;In Stock on the SM USA&quot; during all stages. From the registration of the shipment until its finalization. If one or more products have their status changed to &quot;Abandoned&quot;, that is, they have exceeded the limit of 90 days in &quot;Stock on the SM USA&quot; before being sent to their destinations, they will be removed from the shipment.</p>
+                            Products for a particular shipment must have their status as &quot;In Stock on the PS Tool&quot; during all stages. From the registration of the shipment until its conclusion..</p>
 
-                        <p>
-                            If a payment is made that contains product (s) that had a status marked as &quot;Abandoned&quot;, it is the responsibility of the user to request a refund of the amount paid to the PrepShip Tool, as well as the rectification of shipping on the sales channels.</p>
                         <p>&nbsp;</p>
                         <p>
                             <strong>13 - Support and live chat</strong></p>
