--- a/html/www-bbox/pt/termos-e-condicoes-de-uso/index.html
+++ b/html/www-bbox/pt/termos-e-condicoes-de-uso/index.html
@@ -189,14 +189,13 @@
                         <p>
                             O PrepShip Tool n&atilde;o cobra pelo cadastro e armazenamento dos produtos no seu servidor e no local f&iacute;sico. As cobran&ccedil;as s&atilde;o realizadas a cada envio, por produto e de acordo com o per&iacute;odo de armazenamento do produto com o PrepShip Tool. Segue a tabela de pre&ccedil;os:</p>
                         <p>
-                            <strong>- Produto no estoque MV USA at&eacute; 45 dias: USD 1,29 por produto<br />
-                            - Produto no estoque MV USA de 46 at&eacute; 75 dias: USD 1,49 por produto<br />
-                            - Produto no estoque MV USA de 76 at&eacute; 90 dias: USD 1,99 por produto</strong></p>
+                            <strong>- Produto no estoque PS Tool at&eacute; 45 dias: USD 1,29 por produto<br />
+                            - Produto no estoque PS Tool de 46 at&eacute; 75 dias: USD 1,49 por produto<br />
+                            - Produto no estoque PS Tool de 76 at&eacute; 90 dias: USD 1,99 por produto</strong></p>
                         <p>
                             <br />
-                            A partir do dia 91, o produto ser&aacute; considerado abandonado, retirado da lista do usu&aacute;rio e o PrepShip Tool colocar&aacute; o produto dispon&iacute;vel para venda visando ressarcimento do per&iacute;odo de armazenamento utilizado.</p>
-                        <p>Os produtos contantes de um determinado envio devem ter seu status como "Em estoque MV USA" durante todas as etapas. Desde o cadastro do envio até a sua finalização. Caso um ou mais produtos tenha seu status alterado para "Abandonado", ou seja, tenha ultrapassado o limite de 90 dias em "Estoque MV USA" antes de serem enviados para seus destinos, os mesmos serão retirados do envio. </p>
-                        <p>Se for realizado o pagamento de determinado Envio que contenha produto(s) que tiveram status marcado como "Abandonado", é de responsabilidade do usuário a solicitação do estorno do valor pago para o PrepShip Tool, assim como a retificação de envio nos canais de venda.</p>
+                            A partir do dia 91, será cobrado USD 0,25 por mês, por item armazenado.</p>
+                        <p>Os produtos contantes de um determinado envio devem ter seu status como "Em estoque PS Tool" durante todas as etapas. Desde o cadastro do envio até a sua conclusão.</p>
 
                         <p>
                             &nbsp;</p>
