--- a/html/www-bbox/pt/ajuda/index.html
+++ b/html/www-bbox/pt/ajuda/index.html
@@ -48,7 +48,7 @@
       ga('send', 'pageview');
 
     </script>
-
+    <script src="/static/jsi18n/pt/djangojs.js"></script>
 </head>
 
 <body id="page-top" class="index red-br termos en">
